--- a/src/pages/filmes/index.css
+++ b/src/pages/filmes/index.css
@@ -49,15 +49,11 @@
 
 .area-botao button:hover {
   background: rgb(43, 42, 42);
-  color: #fff;
+  transform: scale(1.05);
 }
 
 .area-botao button a {
   color: rgb(241, 9, 9);
   text-decoration: none;
   transition: 0.2s;
-}
-
-.area-botao button a:hover {
-  color: #fff;
 }
