--- a/src/pages/favoritos/favoritos.css
+++ b/src/pages/favoritos/favoritos.css
@@ -17,8 +17,10 @@ li {
 }
 
 .itens img {
-  width: 100%;
-  height: 480px;
+  width: 95%;
+  height: 450px;
+  border-radius: 10px;
+  margin-top: 5px;
 }
 
 .botoes button {
@@ -31,7 +33,7 @@ li {
 
   color: rgb(241, 9, 9);
   font-size: 16px;
-  width: 188px;
+  width: 180px;
   margin-top: 4px;
   padding: 8px;
   border-radius: 14px;
