--- a/src/pages/semelhantes/semelhantes.css
+++ b/src/pages/semelhantes/semelhantes.css
@@ -4,12 +4,12 @@
 }
 
 .lista-filmes {
-  max-width: 400px;
+  max-width: 700px;
   margin: 14px auto;
 }
 
 .lista-filmes article {
-  width: 100%;
+  width: 400px;
   background-color: rgb(206, 206, 206);
   padding: 15px;
   border-radius: 8px;
